--- a/react-scroll-ts/package.json
+++ b/react-scroll-ts/package.json
@@ -11,6 +11,7 @@
     "serve": "npx serve -p 4173 -s dist"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.9.0"
